@@ -4,6 +4,9 @@ package edu.colorado.phet.linegraphing.common.view;
 import java.awt.Color;
 
 import edu.colorado.phet.common.piccolophet.PhetPNode;
+import edu.umd.cs.piccolo.PNode;
+import edu.umd.cs.piccolo.nodes.PPath;
+import edu.umd.cs.piccolo.nodes.PText;
 
 /**
  * Base class for all equation nodes.
@@ -12,5 +15,26 @@ import edu.colorado.phet.common.piccolophet.PhetPNode;
  */
 public abstract class EquationNode extends PhetPNode {
 
-    public abstract void setEquationColor( Color color );
+    public EquationNode() {
+        setPickable( false );
+    }
+
+    // Changes the color of the equation by doing a deep traversal of this node's descendants.
+    public void setEquationColor( Color color ) {
+        setColorDeep( this, color );
+    }
+
+    private static void setColorDeep( PNode node, Color color ) {
+        for ( int i = 0; i < node.getChildrenCount(); i++ ) {
+            PNode child = node.getChild( i );
+            if ( child instanceof PText ) {
+                ( (PText) child ).setTextPaint( color );
+            }
+            else if ( child instanceof PPath ) {
+                ( (PPath) child ).setStrokePaint( color );
+            }
+            setColorDeep( child, color );
+        }
+    }
+
 }
