@@ -10,8 +10,8 @@ import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPText;
 import edu.colorado.phet.linegraphing.common.LGResources.Strings;
 import edu.colorado.phet.linegraphing.common.model.StraightLine;
+import edu.colorado.phet.linegraphing.common.view.EquationFactory;
 import edu.colorado.phet.linegraphing.common.view.EquationNode;
-import edu.colorado.phet.linegraphing.common.view.SimplifiedEquationFactory;
 import edu.umd.cs.piccolo.nodes.PPath;
 import edu.umd.cs.piccolo.nodes.PText;
 
@@ -24,7 +24,7 @@ import edu.umd.cs.piccolo.nodes.PText;
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
-public class SlopeInterceptEquationFactory extends SimplifiedEquationFactory {
+public class SlopeInterceptEquationFactory extends EquationFactory {
 
     public EquationNode createNode( StraightLine line, PhetFont font ) {
         if ( line.run == 0 ) {
@@ -33,10 +33,10 @@ public class SlopeInterceptEquationFactory extends SimplifiedEquationFactory {
         else if ( line.rise == 0 ) {
             return new ZeroSlopeNode( line, font );
         }
-        else if ( Math.abs( line.getReducedRise() ) == Math.abs( line.getReducedRun() ) ) {
+        else if ( Math.abs( line.rise ) == Math.abs( line.run ) ) {
             return new UnitSlopeNode( line, font );
         }
-        else if ( Math.abs( line.getReducedRun() ) == 1 ) {
+        else if ( Math.abs( line.run ) == 1 ) {
             return new IntegerSlopeNode( line, font );
         }
         else {
@@ -45,7 +45,7 @@ public class SlopeInterceptEquationFactory extends SimplifiedEquationFactory {
     }
 
     // Verbose form of slope-intercept, not reduced, for debugging.
-    private static class VerboseNode extends SimplifiedEquationNode {
+    private static class VerboseNode extends EquationNode {
         public VerboseNode( StraightLine line, PhetFont font ) {
             addChild( new PhetPText( MessageFormat.format( "y = ({0}/{1})x + {2})", line.rise, line.run, line.yIntercept ), font, line.color ) );
         }
@@ -56,7 +56,7 @@ public class SlopeInterceptEquationFactory extends SimplifiedEquationFactory {
      * y = b
      * y = -b
      */
-    private static class ZeroSlopeNode extends SimplifiedEquationNode {
+    private static class ZeroSlopeNode extends EquationNode {
 
         public ZeroSlopeNode( StraightLine line, PhetFont font ) {
 
@@ -86,7 +86,7 @@ public class SlopeInterceptEquationFactory extends SimplifiedEquationFactory {
      * y = -x + b
      * y = -x - b
     */
-    private static class UnitSlopeNode extends SimplifiedEquationNode {
+    private static class UnitSlopeNode extends EquationNode {
 
         public UnitSlopeNode( StraightLine line, PhetFont font ) {
 
@@ -126,14 +126,14 @@ public class SlopeInterceptEquationFactory extends SimplifiedEquationFactory {
      * y = -mx + b
      * y = -mx - b
      */
-    private static class IntegerSlopeNode extends SimplifiedEquationNode {
+    private static class IntegerSlopeNode extends EquationNode {
 
         public IntegerSlopeNode( StraightLine line, PhetFont font ) {
 
             // y = rise x + b
             PText yNode = new PhetPText( Strings.SYMBOL_Y, font, line.color );
             PText equalsNode = new PhetPText( "=", font, line.color );
-            PText riseNode = new PhetPText( toIntString( line.getReducedRise() / line.getReducedRun() ), font, line.color );
+            PText riseNode = new PhetPText( toIntString( line.rise / line.run ), font, line.color );
             PText xNode = new PhetPText( Strings.SYMBOL_X, font, line.color );
             PText signNode = new PhetPText( line.yIntercept > 0 ? "+" : "-", font, line.color );
             PText interceptNode = new PhetPText( toIntString( Math.abs( line.yIntercept ) ), font, line.color );
@@ -165,20 +165,18 @@ public class SlopeInterceptEquationFactory extends SimplifiedEquationFactory {
     * y = -(rise/run) x + b
     * y = -(rise/run) x - b
     */
-    private static class FractionSlopeNode extends SimplifiedEquationNode {
+    private static class FractionSlopeNode extends EquationNode {
 
         public FractionSlopeNode( StraightLine line, PhetFont font ) {
 
-            final int reducedRise = Math.abs( line.getReducedRise() );
-            final int reducedRun = Math.abs( line.getReducedRun() );
             final boolean slopeIsPositive = ( line.rise * line.run ) >= 0;
 
-            // y = -(reducedRise/reducedRun)x + b
+            // y = -(absRise/absRun)x + b
             PText yNode = new PhetPText( Strings.SYMBOL_Y, font, line.color );
             PText equalsNode = new PhetPText( "=", font, line.color );
             PText slopeSignNode = new PhetPText( slopeIsPositive ? "" : "-", font, line.color );
-            PText riseNode = new PhetPText( toIntString( Math.abs( reducedRise ) ), font, line.color );
-            PText runNode = new PhetPText( toIntString( Math.abs( reducedRun ) ), font, line.color );
+            PText riseNode = new PhetPText( toIntString( Math.abs( line.rise ) ), font, line.color );
+            PText runNode = new PhetPText( toIntString( Math.abs( line.run ) ), font, line.color );
             PPath lineNode = new PhetPPath( new Line2D.Double( 0, 0, Math.max( riseNode.getFullBoundsReference().getWidth(), runNode.getFullBoundsReference().getHeight() ), 0 ), new BasicStroke( 1f ), line.color );
             PText xNode = new PhetPText( Strings.SYMBOL_X, font, line.color );
             PText interceptSignNode = new PhetPText( line.yIntercept > 0 ? "+" : "-", font, line.color );
