@@ -1,3 +1,5 @@
+7/23/12 modify *EquationFactory interfaces so that equation simplification is optional
+7/23/12 move responsibility for equation simplification into the model
 7/23/12 rename nodes for interactive equations
 # 0.00.21 (65997) Jul 18, 2012
 7/18/12 tweak game reward parameters
